<?xml version="1.0"?>
<package>
  <name>iiwa_nadelhalterung_description</name>
  <version>0.0.0</version>
  <description>The iiwa_nadelhalterung_description package</description>

  <maintainer email="lauramaria.bielenberg@stud.tu-darmstadt.de">Laura Bielenberg</maintainer>

  <license>BSD</license>
  
  <build_depend>iiwa_description</build_depend>  
  <run_depend>iiwa_description</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
